# SBS

./: README.md
scents-cycor/: main.py  pyproject.toml  replit.nix
scents-cycor/instante/: users.db
scents-cycor/scents/: .env  dashboard.html  download.html  enviar_email.py  index.html  login.html  main.py  pyproject.toml  register.html  requirements.txt  upload.html  usuarios_autorizados.json
scents-cycor/scents/static/: api-docs.html
static/: styles.css
