[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "moviepy>=2.1.2",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
    "werkzeug>=3.1.3",
    "flask-limiter>=3.12",
    "opencv-python>=4.11.0.86",
]
